resolved page overflow, made upcamming isntitute section responsive, and centralized our institutes cards

--- a/src/Components/Carousal.css
+++ b/src/Components/Carousal.css
@@ -4,6 +4,9 @@
     margin-top: 65px;
 }
 
+#main .carousel-inner{
+    padding: 0 !important;
+}
 .carousel {
     z-index: 0;
 }
